refactor(back): Replace '.collect(Collectors.toList())' with 'toList()'