@@ -28,7 +28,7 @@ public class HHStrategy implements Strategy {
     private List<Vacancy> vacanciesFrom(List<Element> vacanciesElements) {
         return vacanciesElements.stream()
                           .map(this::mapToVacancy)
-                          .collect(Collectors.toList());
+                          .toList();
     }
 
     private List<Element> processPage(String searchString) {
@@ -38,7 +38,7 @@ public class HHStrategy implements Strategy {
                      .map(Optional::get)
                      .map(this::getVacanciesElements)
                      .flatMap(Collection::stream)
-                     .collect(Collectors.toList());
+                     .toList();
     }
 
     private Elements getVacanciesElements(Document document) {
